Fix Caps Lock remapping issue

Changes:
Remove the Caps Lock modifier for key event when Caps Lock key is
remapped to another key.

BUG=782572

Change-Id: I561931034acb94719750f9c70f7b8feb6cee5219