chrome/browser/chromeos/events/event_rewriter_unittest.cc
@@ -1061,6 +1061,44 @@ TEST_F(EventRewriterTest, TestRewriteCapsLock) {
                                       ui::VKEY_F16, ui::DomCode::F16,
                                       ui::EF_MOD3_DOWN, ui::DomKey::F16));
   EXPECT_TRUE(ime_keyboard.caps_lock_is_enabled_);
+
+  // Remap Caps Lock to Control.
+  IntegerPrefMember caps_lock;
+  InitModifierKeyPref(&caps_lock, prefs::kLanguageRemapCapsLockKeyTo,
+                      ui::chromeos::ModifierKey::kControlKey);
+
+  // Press Caps Lock.
+  EXPECT_EQ(GetExpectedResultAsString(ui::ET_KEY_PRESSED, ui::VKEY_CONTROL,
+                                      ui::DomCode::CONTROL_LEFT,
+                                      ui::EF_CONTROL_DOWN, ui::DomKey::CONTROL),
+            GetRewrittenEventAsString(rewriter_, ui::ET_KEY_PRESSED,
+                                      ui::VKEY_CAPITAL, ui::DomCode::CAPS_LOCK,
+                                      ui::EF_CAPS_LOCK_ON | ui::EF_MOD3_DOWN,
+                                      ui::DomKey::CAPS_LOCK));
+
+  // Release Caps Lock.
+  EXPECT_EQ(GetExpectedResultAsString(ui::ET_KEY_RELEASED, ui::VKEY_CONTROL,
+                                      ui::DomCode::CONTROL_LEFT, ui::EF_NONE,
+                                      ui::DomKey::CONTROL),
+            GetRewrittenEventAsString(rewriter_, ui::ET_KEY_RELEASED,
+                                      ui::VKEY_CAPITAL, ui::DomCode::CAPS_LOCK,
+                                      ui::EF_NONE, ui::DomKey::CAPS_LOCK));
+
+  // Press F16.
+  EXPECT_EQ(GetExpectedResultAsString(ui::ET_KEY_PRESSED, ui::VKEY_CONTROL,
+                                      ui::DomCode::CONTROL_LEFT,
+                                      ui::EF_CONTROL_DOWN, ui::DomKey::CONTROL),
+            GetRewrittenEventAsString(rewriter_, ui::ET_KEY_PRESSED,
+                                      ui::VKEY_F16, ui::DomCode::F16,
+                                      ui::EF_MOD3_DOWN, ui::DomKey::F16));
+
+  // Release F16.
+  EXPECT_EQ(GetExpectedResultAsString(ui::ET_KEY_RELEASED, ui::VKEY_CONTROL,
+                                      ui::DomCode::CONTROL_LEFT, ui::EF_NONE,
+                                      ui::DomKey::CONTROL),
+            GetRewrittenEventAsString(rewriter_, ui::ET_KEY_RELEASED,
+                                      ui::VKEY_F16, ui::DomCode::F16,
+                                      ui::EF_MOD3_DOWN, ui::DomKey::F16));
 }
 
 TEST_F(EventRewriterTest, TestRewriteDiamondKey) {
